--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsdom": "^15.1.1",
-    "node-rest-client": "^3.1.0"
+    "node-rest-client": "^3.1.0",
+    "url-exists": "^1.0.3"
   }
 }
