--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "jsdom": "^15.1.1",
     "node-rest-client": "^3.1.0",
+    "request": "^2.88.0",
     "url-exists": "^1.0.3"
   }
 }
